--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -3,91 +3,38 @@
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="cart">
 <header th:replace="~{fragments/commons::nav}"></header>
-    <div class="container text-center mt-5 text-white">
+<div class="container text-center mt-5 text-white">
 
-        <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">CART</h1>
+    <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">CART</h1>
 
-            <div class="container-fluid mb-5">
+    <div class="container-fluid mb-5">
 
-                <div class="row align-items-center m-3 cart-round" >
+        <div th:each="bouquet: ${bouquets}" class="row align-items-center m-3 cart-round">
 
-                    <div class="media col-12 col-md-3 p-2">
-                        <img src="/images/boxes/box11.jpg" alt="picture of bouquet">
-                    </div>
-
-                    <div class="col-12 col-md-7 fs-5">
-                        <p>Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto, ipsum odio veniam commodi odit dolor facere cupiditate itaque minus? b</p>
-                        <p class="py-3 fst-italic">Quantity: 2 pcs</p>
-                        <p class="fw-bold fst-italic">Price: {2365.26} $</p>
-                    </div>
-
-                    <div class="col-12 col-md-2">
-                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
-                    </div>
-
-                </div>
-
-                <div class="row align-items-center m-3 cart-round">
-
-                    <div class="media col-12 col-md-3 p-2">
-                        <img src="/images/boxes/box10.jpg" alt="picture of bouquet">
-                    </div>
-
-                    <div class="col-12 col-md-7 fs-5">
-                        <p>Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto, ipsum odio veniam commodi odit dolor facere cupiditate itaque minus? b</p>
-                        <p class="py-3 fst-italic">Quantity: 2 pcs</p>
-                        <p class="fw-bold fst-italic">Price: {2365.26} $</p>
-                    </div>
-
-                    <div class="col-12 col-md-2">
-                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
-                    </div>
-
-                </div>
-
-                <div class="row align-items-center m-3 cart-round">
-
-                    <div class="media col-12 col-md-3 p-2">
-                        <img src="/images/boxes/box9.jpg" alt="picture of bouquet">
-                    </div>
-
-                    <div class="col-12 col-md-7 fs-5">
-                        <p>Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto, ipsum odio veniam commodi odit dolor facere cupiditate itaque minus? b</p>
-                        <p class="py-3 fst-italic">Quantity: 2 pcs</p>
-                        <p class="fw-bold fst-italic">Price: {2365.26} $</p>
-                    </div>
-
-                    <div class="col-12 col-md-2">
-                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
-                    </div>
-
-                </div>
-
-                <div class="row align-items-center m-3 cart-round">
-
-                    <div class="media col-12 col-md-3 p-2">
-                        <img src="/images/boxes/box8.jpg" alt="picture of bouquet">
-                    </div>
-
-                    <div class="col-12 col-md-7 fs-5">
-                        <p>Description Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto, ipsum odio veniam commodi odit dolor facere cupiditate itaque minus? b</p>
-                        <p class="py-3 fst-italic">Quantity: 2 pcs</p>
-                        <p class="fw-bold fst-italic">Price: {2365.26} $</p>
-                    </div>
-
-                    <div class="col-12 col-md-2">
-                        <button class="remove-btn rounded-pill px-3 py-1">Remove</button>
-                    </div>
-
-                </div>
-                
+            <div class="media col-12 col-md-3 p-2">
+                <img th:src="${bouquet.getUrl()}" alt="picture of bouquet">
             </div>
-            
-         <div class="mt-3 mb-5">
-            <p class="fs-3 fw-bold fst-italic m-3">Total sum: 136920 $</p>
-             <button class="button-29 rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic">BUY</button>
-         </div>
+
+            <div class="col-12 col-md-7 fs-5">
+                <p th:text="${bouquet.getDescription()}">{Description}</p>
+                <p class="py-3 fst-italic" th:text="|Quantity: ${bouquet.getQuantity()} pcs|">Quantity: {2} pcs</p>
+                <p class="fw-bold fst-italic" th:text="|Price: ${bouquet.price} $|">Price: {2365.26} $</p>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <form th:action="@{/cart/remove/{itemNumber}(itemNumber=*{bouquet.getItemNumber()})}" th:method="post">
+                    <button type="submit" class="remove-btn rounded-pill px-3 py-1">Remove</button>
+                </form>
+            </div>
+
+        </div>
     </div>
+
+    <div class="mt-3 mb-5">
+        <p class="fs-3 fw-bold fst-italic m-3" th:text="|Total sum: ${totalSum} $|">Total sum: {totalSum} $</p>
+        <button class="button-29 rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic">BUY</button>
+    </div>
+</div>
 
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
