--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -41,6 +41,7 @@
       </li>
       <li sec:authorize="isAuthenticated()">
         <a th:href="@{/cart}">
+<!--          TODO: show the number of products in the cart-->
           <img src="/images/shopping-cart.png" alt="cart">
         </a>
       </li>
