implement RestClient for orders
Create OrderApiConfig
Create RestConfig
Create OrderController
Create OrderDTO
Create OrderItemDTO
Create OrderService
Create OrderServiceImpl
Update CartController
Update BouquetDTO
Update UserRegisterDTO
Update CartItem
Update User
Update BouquetServiceImpl
Update CartServiceImpl
Update HomeServiceImpl
Update UserServiceImpl
Update templates

--- a/Flowers-Shop/src/main/resources/templates/bouquet-add.html
+++ b/Flowers-Shop/src/main/resources/templates/bouquet-add.html
@@ -19,9 +19,9 @@
                 <small th:errors="*{itemNumber}" class="text-danger">Item Number error message</small>
             </div>
             <div class="form-floating mb-3 text-center">
-                <input th:field="*{price}" th:errorclass="is-invalid" type="number" step=".01" class="form-control" id="price" placeholder="Price">
+                <input th:field="*{unitPrice}" th:errorclass="is-invalid" type="number" step=".01" class="form-control" id="price" placeholder="Price">
                 <label for="price">Price</label>
-                <small th:errors="*{price}" class="text-danger">Price error message</small>
+                <small th:errors="*{unitPrice}" class="text-danger">Price error message</small>
             </div>
 <!--            <div class="form-floating mb-3 text-center">-->
 <!--                <input th:field="*{url}" th:errorclass="is-invalid" type="text" class="form-control" id="url" placeholder="Url">-->
