--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -31,9 +31,11 @@
     </div>
 
     <div class="mt-3 mb-5">
-        <p class="fs-3 fw-bold fst-italic m-3" th:text="|Total sum: ${totalSum} $|">Total sum: {totalSum} $</p>
-        <button class="button-29 rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic">BUY</button>
-        <button class="exitBtn rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic ">f060</button>
+        <form th:action="@{/order/{cartId}(cartId=*{cart.getId()})}" th:method="post">
+            <p class="fs-3 fw-bold fst-italic m-3" th:text="|Total sum: ${totalSum} $|">Total sum: {totalSum} $</p>
+            <button class="button-29 rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic">BUY</button>
+            <a th:href="@{/home}" class="exitBtn rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic ">back</a>
+        </form>
     </div>
 </div>
 <!--        TODO:implement back to gallery button-->
