--- a/Flowers-Shop/src/main/resources/templates/my-orders.html
+++ b/Flowers-Shop/src/main/resources/templates/my-orders.html
@@ -3,54 +3,158 @@
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="cart">
 <header th:replace="~{fragments/commons::nav}"></header>
-<div class="container text-center mt-5 text-white">
 
-    <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">My Orders</h1>
+<section class="gradient-custom">
+    <div class="container py-5">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-10 col-xl-8">
+                <div class="border" style="border-radius: 10px;">
+                    <div class="card-body p-4">
+                        <div class="shadow-0 mb-4">
+                            <div class="card-body text-white">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/13.webp"
+                                             class="img-fluid" alt="Phone">
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 text-white">Samsung Galaxy</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">White</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">Capacity: 64GB</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">Qty: 1</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">$499</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="shadow-0 mb-4">
+                            <div class="card-body text-white">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/13.webp"
+                                             class="img-fluid" alt="Phone">
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 text-white">Samsung Galaxy</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">White</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">Capacity: 64GB</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">Qty: 1</p>
+                                    </div>
+                                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center text-white">
+                                        <p class="mb-0 small text-white">$499</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-    <div class="container-fluid mb-5">
+                        <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
 
-        <div th:each="order: ${orders}" class="row align-items-center m-3 cart-round">
+                        <div class="d-flex justify-content-between pt-2 text-white">
+                            <p class="fw-bold mb-0 text-white">Order Details</p>
+                            <p class="mb-0 text-white"><span class="fw-bold me-4 text-white">Total</span> $898.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between text-white">
+                            <p class="mb-0 text-white">Invoice Date : 22 Dec,2019</p>
+                            <p class="mb-0 text-white"><span class="fw-bold me-4 text-white">GST 18%</span> 123</p>
+                        </div>
 
-<!--            <p th:text="|Order number ${order.getId}|">Order number {order.id}</p>-->
-
-            <div th:each="item: ${orderItems}" class="row align-items-center m-3 cart-round">
-
-                <div class="media col-12 col-md-3 p-2">
-                    <img th:src="${item.getBouquet().getUrl()}" alt="picture of bouquet">
+<!--                        <div class="d-flex justify-content-between mb-5">-->
+<!--                            <p class="text-muted mb-0">Recepits Voucher : 18KU-62IIK</p>-->
+<!--                            <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>-->
+<!--                        </div>-->
+                    </div>
                 </div>
-
-                <div class="col-12 col-md-7 fs-5">
-                    <p th:text="${item.getBouquet().getDescription()}">{Description}</p>
-                    <p class="py-3 fst-italic" th:text="|Quantity: ${item.getQuantity()} pcs|">Quantity: {2} pcs</p>
-                    <p class="fw-bold fst-italic" th:text="|Price per pcs: ${item.getBouquet().getPrice()} $|">Price: {2365.26} $</p>
-                    <p class="fw-bold fst-italic" th:text="|Total price: ${item.getBouquet().getPrice() * item.getQuantity()} $|">Total price: {2365.26} $</p>
-                </div>
-
-                <div class="col-12 col-md-2">
-                    <form th:action="@{/}" th:method="post">
-                        <button type="submit" class="remove-btn rounded-pill px-3 py-1">Cancel</button>
-                    </form>
-                </div>
-
             </div>
-
-            <div class="mt-3 mb-5">
-
-                <p class="fw-bold fst-italic" th:text="|Total price for order: ${totalOrderPrice} $|">Total price for order: {2365.26} $</p>
-
-                <form th:action="@{/}" th:method="post">
-                    <p class="fs-3 fw-bold fst-italic m-3" th:text="|Total sum: ${totalSum} $|">Total sum: {totalSum} $</p>
-                    <button class="button-29 rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic">Cancel</button>
-                    <a th:href="@{/home}" class="exitBtn rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic ">back</a>
-                </form>
-            </div>
-
         </div>
-
     </div>
+</section>
+<!--<div class="container text-center mt-5 text-white">-->
 
+<!--    <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">My Orders</h1>-->
 
-</div>
+<!--    <div th:each="order: ${orders}" class="container-fluid mb-5">-->
+<!--        <div th:each="item: ${order.getItems()}" class="card shadow-0 border mb-4">-->
+<!--            <div class="card-body">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-2">-->
+<!--                        <img th:src="${item.getUrl()}"-->
+<!--                             class="img-fluid mw-100 mh-100" alt="bouquet picture">-->
+<!--                    </div>-->
+<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
+<!--                        <p class="text-muted mb-0" th:text="${item.getDescription()}">Description</p>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
+<!--                        <p class="text-muted mb-0 small" th:text="${item.getItemNumber()}">Item number</p>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
+<!--                        <p class="text-muted mb-0 small" th:text="${item.getQuantity()}">Qty: 1</p>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
+<!--                        <p class="text-muted mb-0 small" th:text="${item.getUnitPrice()}">$499</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">-->
+
+<!--                <div class="row d-flex align-items-center">-->
+<!--                    <div class="col-md-2">-->
+<!--                        <p class="text-muted mb-0 small">Track Order</p>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-10">-->
+<!--                        <div class="progress" style="height: 6px; border-radius: 16px;">-->
+<!--                            <div class="progress-bar" role="progressbar"-->
+<!--                                 style="width: 65%; border-radius: 16px; background-color: #a8729a;" aria-valuenow="65"-->
+<!--                                 aria-valuemin="0" aria-valuemax="100"></div>-->
+<!--                        </div>-->
+<!--                        <div class="d-flex justify-content-around mb-1">-->
+<!--                            <p class="text-muted mt-1 mb-0 small ms-xl-5">Out for delivary</p>-->
+<!--                            <p class="text-muted mt-1 mb-0 small ms-xl-5">Delivered</p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="d-flex justify-content-between pt-2 text-white">-->
+<!--            <p class="fw-bold mb-0">Order Details</p>-->
+<!--            <p class="text-muted mb-0" th:text="${order.getTotalAmount()}"><span class="fw-bold me-4">Total</span> $898.00</p>-->
+<!--        </div>-->
+
+<!--        <div class="d-flex justify-content-between pt-2 text-white">-->
+<!--            <p class="text-muted mb-0">Invoice Number : 788152</p>-->
+<!--            <p class="text-muted mb-0"><span class="fw-bold me-4">Discount</span> $19.00</p>-->
+<!--        </div>-->
+
+<!--        <div class="d-flex justify-content-between text-white">-->
+<!--            <p class="text-muted mb-0" th:text="${order.getOrderDateTime()}">Invoice Date : 22 Dec,2019</p>-->
+<!--            <p class="text-muted mb-0"><span class="fw-bold me-4">GST 18%</span> 123</p>-->
+<!--        </div>-->
+
+<!--        <div class="d-flex justify-content-between mb-5 text-white">-->
+<!--            <p class="text-muted mb-0">Recepits Voucher : 18KU-62IIK</p>-->
+<!--            <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>-->
+<!--        </div>-->
+
+<!--        <div class="card-footer border-0 px-4 py-5 text-white"-->
+<!--             style="background-color: #a8729a; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">-->
+<!--            <h5 class="d-flex align-items-center justify-content-end text-white text-uppercase mb-0">Total-->
+<!--                paid: <span class="h2 mb-0 ms-2">$1040</span></h5>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--</div>-->
 <!--        TODO:implement back to gallery button-->
 
 <footer th:replace="~{fragments/commons::footer}"></footer>
