--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -43,6 +43,8 @@ nav ul {
 nav ul li {
     padding: 0.6em 0;
     font-size: 1.2em;
+    margin-top: 5px;
+    
 }
 
 nav ul li a {
@@ -358,3 +360,4 @@ button {
     top: 0;
     border-radius: 10px;
 }
+
