--- a/Flowers-Shop/src/main/resources/templates/my-orders.html
+++ b/Flowers-Shop/src/main/resources/templates/my-orders.html
@@ -43,95 +43,18 @@
                             <p class="mb-0 text-white" th:text="|Total: ${order.getTotalAmount()}|"><span class="fw-bold me-4 text-white">Total</span> $898.00</p>
                         </div>
                         <div class="d-flex justify-content-between text-white">
+<!--                            TODO: format date time - separate date and time -->
                             <p class="mb-0 text-white" th:text="|Order Date and time: ${order.getOrderDateTime()}|">Order Date and time: 22 Dec,2019</p>
                             <p class="mb-0 text-white" th:text="|Status: ${order.getStatus()}|"><span class="fw-bold me-4 text-white">Status</span>PENDING</p>
                         </div>
+                        <p class="fw-bold mb-0 text-white" th:text="|Shipping address: ${order.getShippingAddress()}|">Address</p>
 
-<!--                        <div class="d-flex justify-content-between mb-5">-->
-<!--                            <p class="text-muted mb-0">Recepits Voucher : 18KU-62IIK</p>-->
-<!--                            <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>-->
-<!--                        </div>-->
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!--<div class="container text-center mt-5 text-white">-->
-
-<!--    <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">My Orders</h1>-->
-
-<!--    <div th:each="order: ${orders}" class="container-fluid mb-5">-->
-<!--        <div th:each="item: ${order.getItems()}" class="card shadow-0 border mb-4">-->
-<!--            <div class="card-body">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-md-2">-->
-<!--                        <img th:src="${item.getUrl()}"-->
-<!--                             class="img-fluid mw-100 mh-100" alt="bouquet picture">-->
-<!--                    </div>-->
-<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
-<!--                        <p class="text-muted mb-0" th:text="${item.getDescription()}">Description</p>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
-<!--                        <p class="text-muted mb-0 small" th:text="${item.getItemNumber()}">Item number</p>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
-<!--                        <p class="text-muted mb-0 small" th:text="${item.getQuantity()}">Qty: 1</p>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-2 text-center d-flex justify-content-center align-items-center">-->
-<!--                        <p class="text-muted mb-0 small" th:text="${item.getUnitPrice()}">$499</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">-->
-
-<!--                <div class="row d-flex align-items-center">-->
-<!--                    <div class="col-md-2">-->
-<!--                        <p class="text-muted mb-0 small">Track Order</p>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-10">-->
-<!--                        <div class="progress" style="height: 6px; border-radius: 16px;">-->
-<!--                            <div class="progress-bar" role="progressbar"-->
-<!--                                 style="width: 65%; border-radius: 16px; background-color: #a8729a;" aria-valuenow="65"-->
-<!--                                 aria-valuemin="0" aria-valuemax="100"></div>-->
-<!--                        </div>-->
-<!--                        <div class="d-flex justify-content-around mb-1">-->
-<!--                            <p class="text-muted mt-1 mb-0 small ms-xl-5">Out for delivary</p>-->
-<!--                            <p class="text-muted mt-1 mb-0 small ms-xl-5">Delivered</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="d-flex justify-content-between pt-2 text-white">-->
-<!--            <p class="fw-bold mb-0">Order Details</p>-->
-<!--            <p class="text-muted mb-0" th:text="${order.getTotalAmount()}"><span class="fw-bold me-4">Total</span> $898.00</p>-->
-<!--        </div>-->
-
-<!--        <div class="d-flex justify-content-between pt-2 text-white">-->
-<!--            <p class="text-muted mb-0">Invoice Number : 788152</p>-->
-<!--            <p class="text-muted mb-0"><span class="fw-bold me-4">Discount</span> $19.00</p>-->
-<!--        </div>-->
-
-<!--        <div class="d-flex justify-content-between text-white">-->
-<!--            <p class="text-muted mb-0" th:text="${order.getOrderDateTime()}">Invoice Date : 22 Dec,2019</p>-->
-<!--            <p class="text-muted mb-0"><span class="fw-bold me-4">GST 18%</span> 123</p>-->
-<!--        </div>-->
-
-<!--        <div class="d-flex justify-content-between mb-5 text-white">-->
-<!--            <p class="text-muted mb-0">Recepits Voucher : 18KU-62IIK</p>-->
-<!--            <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>-->
-<!--        </div>-->
-
-<!--        <div class="card-footer border-0 px-4 py-5 text-white"-->
-<!--             style="background-color: #a8729a; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">-->
-<!--            <h5 class="d-flex align-items-center justify-content-end text-white text-uppercase mb-0">Total-->
-<!--                paid: <span class="h2 mb-0 ms-2">$1040</span></h5>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--</div>-->
-<!--        TODO:implement back to gallery button-->
-
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
 </html>
