--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments/commons::head}"></head>
 <body class="cart">
 <header th:replace="~{fragments/commons::nav}"></header>
-<div class="container text-center mt-5 text-white">
+<div class="container text-center my-5 text-white">
 
     <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">CART</h1>
 
@@ -12,7 +12,7 @@
         <div th:each="item: ${items}" class="row align-items-center m-3 cart-round">
 
             <div class="media col-12 col-md-3 p-2">
-                <img th:src="${item.getBouquet().getUrl()}" alt="picture of bouquet">
+                <img style="height: 300px;" th:src="${item.getBouquet().getUrl()}" alt="picture of bouquet">
             </div>
 
             <div class="col-12 col-md-7 fs-5">
@@ -33,12 +33,16 @@
     <div class="mt-3 mb-5">
         <form th:action="@{/order/{cartId}(cartId=*{cart.getId()})}" th:method="post">
             <p class="fs-3 fw-bold fst-italic m-3" th:text="|Total sum: ${totalSum} $|">Total sum: {totalSum} $</p>
-            <button class="button-29 rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic">BUY</button>
-            <a th:href="@{/home}" class="exitBtn rounded-pill mb-5 px-5 fs-3 fw-bold fst-italic ">back</a>
+<!--            TODO: return to home if cart is empty-->
+<!--            TODO: empty cart when order is created -->
+            <button th:unless="0 == ${totalSum}" class="button-29 rounded-pill mb-4 px-5 fs-3 fw-bold fst-italic">BUY</button>
+            <p style="margin-bottom: 5em;">
+                <a th:href="@{/home}"class="rounded-pill mb-5 px-5 py-2 fs-5 fw-bold fst-italic text-light
+                text-decoration-none border border-light">back to gallery</a>
+            </p>
         </form>
     </div>
 </div>
-<!--        TODO:implement back to gallery button-->
 
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
