--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -38,7 +38,7 @@
             <button th:unless="0 == ${totalSum}" class="button-29 rounded-pill mb-4 px-5 fs-3 fw-bold fst-italic">BUY</button>
             <p style="margin-bottom: 5em;">
                 <a th:href="@{/home}"class="rounded-pill mb-5 px-5 py-2 fs-5 fw-bold fst-italic text-light
-                text-decoration-none border border-light">back to gallery</a>
+                text-decoration-none border border-light">To gallery</a>
             </p>
         </form>
     </div>
