--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -26,21 +26,34 @@
         <a class="bn5" th:href="@{/bouquet/add}">Add Bouquet</a>
       </li>
       <li sec:authorize="isAuthenticated()">
+        <a class="bn5" th:href="@{/home}">Gallery</a>
+      </li>
+
+      <li sec:authorize="isAuthenticated()">
         <span class="text-white">Welcome, </span>
         <span class="text-white" sec:authentication="name">Anonymous</span>
       </li>
       <li sec:authorize="!isAuthenticated()">
-        <a class="bn5" th:href="@{/login}">Login</a>
+        <a class="bn5" th:href="@{/login}" th:text="#{nav_bar_login}">Login</a>
       </li>
       <li sec:authorize="!isAuthenticated()">
-        <a class="bn5" th:href="@{/register}">Register</a>
+        <a class="bn5" th:href="@{/register}" th:text="#{nav_bar_register}">Register</a>
       </li>
       <li sec:authorize="isAuthenticated()">
         <a class="bn5" th:href="@{/orders}">My orders</a>
       </li>
       <li sec:authorize="isAuthenticated()">
         <form th:action="@{/logout}" th:method="post">
-          <button type="submit" class="text-white bg-black bn5">Logout</button>
+          <button type="submit" class="text-white bg-black bn5" th:text="#{nav_bar_logout}">Logout</button>
+        </form>
+      </li>
+      <li>
+        <form >
+          <label class="text-white" for="lang" th:text="#{nav_bar_language}">Language</label>
+          <select id="lang" name="lang" onchange="this.form.submit()">
+            <option value="en_EN" th:selected="${#locale.toString()} == 'en_US'">EN</option>
+            <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">BG</option>
+          </select>
         </form>
       </li>
       <li sec:authorize="isAuthenticated()">
