--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ОРХИДЕЯ</title>
+  <title th:text="#{title_message}">ОРХИДЕЯ</title>
   <link rel="icon" href="/images/orchid_9704101.png" type="image/icon type">
   <link rel="stylesheet" href="/css/reset-css.css">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -19,19 +19,19 @@
     <ul>
       <li>
         <img src="/images/orchid_9704101.png" alt="orchid">
-        <a sec:authorize="isAuthenticated()" th:href="@{/home}">Orchid app</a>
-        <a sec:authorize="!isAuthenticated()" th:href="@{/}">Orchid app</a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/home}" th:text="#{nav_bar_company}">Orchid</a>
+        <a sec:authorize="!isAuthenticated()" th:href="@{/}" th:text="#{nav_bar_company}">Orchid</a>
       </li>
       <li sec:authorize="hasRole('ROLE_ADMIN')">
-        <a class="bn5" th:href="@{/bouquet/add}">Add Bouquet</a>
+        <a class="bn5" th:href="@{/bouquet/add}" th:text="#{nav_bar_add_bouquet}">Add Bouquet</a>
       </li>
       <li sec:authorize="isAuthenticated()">
-        <a class="bn5" th:href="@{/home}">Gallery</a>
+        <a class="bn5" th:href="@{/home}" th:text="#{nav_bar_gallery}">Gallery</a>
       </li>
 
       <li sec:authorize="isAuthenticated()">
-        <span class="text-white">Welcome, </span>
-        <span class="text-white" sec:authentication="name">Anonymous</span>
+        <span class="text-white" th:text="#{nav_bar_welcome}">Welcome, </span>
+        <span class="text-white" sec:authentication="name" th:text="#{anonymous}" >Anonymous</span>
       </li>
       <li sec:authorize="!isAuthenticated()">
         <a class="bn5" th:href="@{/login}" th:text="#{nav_bar_login}">Login</a>
@@ -40,7 +40,7 @@
         <a class="bn5" th:href="@{/register}" th:text="#{nav_bar_register}">Register</a>
       </li>
       <li sec:authorize="isAuthenticated()">
-        <a class="bn5" th:href="@{/orders}">My orders</a>
+        <a class="bn5" th:href="@{/orders}" th:text="#{nav_bar_my_orders}">My orders</a>
       </li>
       <li sec:authorize="isAuthenticated()">
         <form th:action="@{/logout}" th:method="post">
@@ -51,8 +51,8 @@
         <form >
           <label class="text-white" for="lang" th:text="#{nav_bar_language}">Language</label>
           <select id="lang" name="lang" onchange="this.form.submit()">
-            <option value="en_EN" th:selected="${#locale.toString()} == 'en_US'">EN</option>
-            <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">BG</option>
+            <option value="en_EN" th:selected="${#locale.toString()} == 'en_US'">En</option>
+            <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Бг</option>
           </select>
         </form>
       </li>
@@ -67,7 +67,7 @@
 </header>
 <footer>
   <!-- todo: fix responsive issue with position-fixed -->
-  <div>&copy Ivan Rusenov 2024</div>
+  <div th:text="|&copy #{footer_message}|">Ivan Rusenov 2024</div>
 </footer>
 
 </body>
