--- a/Flowers-Shop/src/main/resources/templates/register.html
+++ b/Flowers-Shop/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
                 <small th:errors="*{confirmPassword}" class="text-danger">Email error message</small>
             </div>
             <div class="form-floating mb-3 text-center">
-                <button class="button-29 rounded-pill p-2 w-50 my-2 ">REGISTER</button>
+                <button class="btn-gold rounded-pill p-2 w-50 my-2 ">REGISTER</button>
             </div>
         </form>
     </div>
