--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -15,49 +15,55 @@
 <body>
 <header >
   <nav>
-<!--    TODO: new nav layout when items are hidden-->
     <ul>
-      <li>
+      <li class="glowing-gold">
         <img src="/images/orchid_9704101.png" alt="orchid">
         <a sec:authorize="isAuthenticated()" th:href="@{/home}" th:text="#{nav_bar_company}">Orchid</a>
         <a sec:authorize="!isAuthenticated()" th:href="@{/}" th:text="#{nav_bar_company}">Orchid</a>
       </li>
       <li sec:authorize="hasRole('ROLE_ADMIN')">
-        <a class="bn5" th:href="@{/bouquet/add}" th:text="#{nav_bar_add_bouquet}">Add Bouquet</a>
+        <a class="glowing-gold" th:href="@{/bouquet/add}" th:text="#{nav_bar_add_bouquet}">Add Bouquet</a>
       </li>
-      <li sec:authorize="isAuthenticated()">
-        <a class="bn5" th:href="@{/home}" th:text="#{nav_bar_gallery}">Gallery</a>
+      <li sec:authorize="!hasRole('ROLE_MODERATOR')">
+        <a class="glowing-gold" th:href="@{/home}" th:text="#{nav_bar_gallery}">Gallery</a>
       </li>
 
-      <li sec:authorize="isAuthenticated()">
+      <li sec:authorize="hasRole('ROLE_MODERATOR')">
+        <a class="glowing-gold" th:href="@{/order/change-status}">Change status</a>
+      </li>
+
+      <li sec:authorize="isAuthenticated() && !hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
         <span class="text-white" th:text="#{nav_bar_welcome}">Welcome, </span>
-        <span class="text-white" sec:authentication="name" th:text="#{anonymous}" >Anonymous</span>
+        <span class="text-white" sec:authentication="name">Anonymous</span>
       </li>
       <li sec:authorize="!isAuthenticated()">
-        <a class="bn5" th:href="@{/login}" th:text="#{nav_bar_login}">Login</a>
+        <a class="glowing-gold" th:href="@{/login}" th:text="#{nav_bar_login}">Login</a>
       </li>
-      <li sec:authorize="!isAuthenticated()">
-        <a class="bn5" th:href="@{/register}" th:text="#{nav_bar_register}">Register</a>
+      <li sec:authorize="!isAuthenticated()" >
+        <a class="glowing-gold" th:href="@{/register}" th:text="#{nav_bar_register}">Register</a>
       </li>
-      <li sec:authorize="isAuthenticated()">
-        <a class="bn5" th:href="@{/orders}" th:text="#{nav_bar_my_orders}">My orders</a>
+      <li sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
+        <a class="glowing-gold" th:href="@{/orders}" th:text="#{nav_bar_my_orders}">My orders</a>
+      </li>
+      <li sec:authorize="hasRole('ROLE_MODERATOR')">
+        <a class="glowing-gold" th:href="@{/orders/pending}">All pending orders</a>
       </li>
       <li sec:authorize="isAuthenticated()">
         <form th:action="@{/logout}" th:method="post">
-          <button type="submit" class="text-white bg-black bn5" th:text="#{nav_bar_logout}">Logout</button>
+          <button type="submit" class="text-white bg-black glowing-gold" th:text="#{nav_bar_logout}">Logout</button>
         </form>
       </li>
-      <li>
+      <li class="glowing-gold">
         <form >
-          <label class="text-white" for="lang" th:text="#{nav_bar_language}">Language</label>
-          <select id="lang" name="lang" onchange="this.form.submit()">
+          <label class="text-white px-2" for="lang" th:text="#{nav_bar_language}">Language</label>
+          <select class="text-white bg-black" id="lang" name="lang" onchange="this.form.submit()">
             <option value="en_EN" th:selected="${#locale.toString()} == 'en_US'">En</option>
             <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Бг</option>
           </select>
         </form>
       </li>
-      <li sec:authorize="isAuthenticated()">
-        <a class="bn5" th:href="@{/cart}">
+      <li sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
+        <a class="glowing-gold" th:href="@{/cart}">
 <!--          TODO: show the number of products in the cart-->
           <img src="/images/shopping-cart.png" alt="cart">
         </a>
