--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -19,11 +19,12 @@
                         <p class="card-text" th:text="|No. ${bouquet.itemNumber}|">{No.}</p>
                         <p class="card-text mb-2" th:text="|Price: ${bouquet.unitPrice}|">{Price: lv.}</p>
 
-                        <a sec:authorize="!hasRole('ROLE_ADMIN')" th:href="@{/cart/add/{itemNumber}(itemNumber=${bouquet.itemNumber})}" class="button-29 rounded-pill">ADD TO CART</a>
+                        <a sec:authorize="!hasRole('ROLE_ADMIN')" th:href="@{/cart/add/{itemNumber}(itemNumber=${bouquet.itemNumber})}" class="btn-gold rounded-pill">ADD TO CART</a>
                         <form sec:authorize="hasRole('ROLE_ADMIN')"
                               th:method="post"
                               th:action="@{/bouquet/remove/{itemNumber}(itemNumber=${bouquet.itemNumber})}"
                         >
+<!--                            todo: fix button href-->
                             <button th:href="@{/bouquet/remove/{itemNumber}(itemNumber=${bouquet.itemNumber})}"
                                     class="remove-btn rounded-pill py-2 px-4">Remove</button>
                         </form>
