inplement change-status for mod
Change SecurityConfiguration muultiple home pages for different roles

--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -367,3 +367,11 @@ button {
     border-radius: 10px;
 }
 
+
+.shipping-order {
+    background-image: url(/images/shipping-background.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
