--- a/Flowers-Shop/src/main/resources/templates/shipping-order.html
+++ b/Flowers-Shop/src/main/resources/templates/shipping-order.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
-<body class="cart">
+<body class="shipping-order">
 <header th:replace="~{fragments/commons::nav}"></header>
 
 <section class="gradient-custom">
-    <div class="container py-5">
+
+    <h1 class="display-6 p-2 border-bottom border-4 m-5 fw-bold fst-italic text-center text-white">Orders for shipping:
+        <span class="px-2 text-danger" th:text="${#lists.size(orders)}"></span>
+    </h1>
+
+
+    <div class="container py-1">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-10 col-xl-8">
-                <div class="border mb-3" style="border-radius: 10px;" th:each="order: ${orders}">
+                <div class="border mb-3  bg-black" style="border-radius: 10px;" th:each="order: ${orders}">
                     <form th:method="post"
                           th:action="@{/order/change-status}">
                     <div class="p-4">
